--- a/index.html
+++ b/index.html
@@ -1,19 +1,57 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenidos a mi Página</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página personal de Isabel Moreno">
+    <title>Isabel Moreno - Página Personal</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>¡Hola! Soy Isabel Moreno</h1>
-  </header>
-  <section>
-    <p>Bienvenidos a mi página personal. Aquí encontrarás información sobre mí, mis proyectos y cómo contactar conmigo.</p>
-  </section>
-  <footer>
-    <p>Contacto: <a href="mailto:maria.moreno39@educa.madrid.org">isabel.morenom@example.com</a></p>
-  </footer>
+    <header>
+        <div class="container">
+            <h1>Hola, soy Isabel Moreno</h1>
+            <p>Bienvenidos a mi página personal.</p>
+        </div>
+    </header>
+
+    <section class="about">
+        <div class="container">
+            <h2>Sobre mí</h2>
+            <p>
+                Trabajo como profesora funcionaria en el IES Enrique Tierno Galván de Madid
+                y apasionada por la tecnología. Me gusta aprender nuevas herramientas y
+                transmitir mis conocimientos a los alumnos para que puedan trabajar en proyectos 
+                que tengan un impacto positivo en la sociedad que vivimos. 
+                En esta página encontrarás mis proyectos, experiencias y contacto.
+            </p>
+        </div>
+    </section>
+
+    <section class="projects">
+        <div class="container">
+            <h2>Proyectos Destacados</h2>
+            <ul>
+                <li><a href="https://github.com/isabelmorenom/ExData_Project2" target="_blank">Proyecto 1</a> - Descripción breve del proyecto.</li>
+                <li><a href="https://github.com/isabelmorenom/ExData_Plotting1" target="_blank">Proyecto 2</a> - Descripción breve del proyecto.</li>
+                
+            </ul>
+        </div>
+    </section>
+
+    <section class="contact">
+        <div class="container">
+            <h2>Contacto</h2>
+            <p>Si quieres ponerte en contacto conmigo, no dudes en escribirme al siguiente correo:</p>
+            <p><a href="mailto:maria.moreno39@educa.madrid.org">isabel.morenom@example.com</a></p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Isabel Moreno. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
+
