Agrega página personal

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="container">
             <h2>Proyectos Destacados</h2>
             <ul>
-                <li><a href="https://github.com/isabelmorenom/ExData_Project2" target="_blank">Proyecto 1</a> - Descripción breve del proyecto.</li>
-                <li><a href="https://github.com/isabelmorenom/ExData_Plotting1" target="_blank">Proyecto 2</a> - Descripción breve del proyecto.</li>
+                <li><a href="https://github.com/isabelmorenom/ExData_Project2" target="_blank">Proyecto 1</a> - Ciencia Datos.</li>
+                <li><a href="https://github.com/isabelmorenom/ExData_Plotting1" target="_blank">Proyecto 2</a> - Ciencia Datos.</li>
                 
             </ul>
         </div>
@@ -43,7 +43,7 @@
         <div class="container">
             <h2>Contacto</h2>
             <p>Si quieres ponerte en contacto conmigo, no dudes en escribirme al siguiente correo:</p>
-            <p><a href="mailto:maria.moreno39@educa.madrid.org">isabel.morenom@example.com</a></p>
+            <p><a href="mailto:maria.moreno39@educa.madrid.org">maria.moreno39@educa.madrid.org</a></p>
         </div>
     </section>
 
